src/assets/main.css
@font-face {
    font-family: 'Open Sans';
    src: url('./fonts/OpenSans-Bold.ttf')  format('truetype');
}
@font-face {
    font-family: 'PFFreeScript';
    src: url('./fonts/PFFreeScript Bold.ttf')  format('truetype');
}
@font-face {
    font-family: 'RobotoFlex';
    src: url('./fonts/RobotoFlex.ttf')  format('truetype');
}

